# l-system-prototype

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
book/: book.toml
book/src/: SUMMARY.md  cli.md  crab-basics.md  introduction.md  parser.md  renderer.md  state-management.md
docs/: index.html
parser/: Cargo.toml
parser/src/: combinator.rs  lib.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
src/: lib.rs  main.rs
src/parser/: combinator.rs  mod.rs
src/render/: collection.rs  crab.rs  mod.rs  string.rs
src/system/: mod.rs
systems/: koch.ls  plant.ls
