[package]
name = "prototype"
version = "0.1.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]
edition = "2018"

[[bin]]
name = "l-system"
path = "src/main.rs"

[workspace]
members = [
    "api",
    "parser",
    "renderer"
]

[dependencies]
api = {path = "api" }
parser = {path = "parser" }
renderer = { path = "renderer" }
clap = "2.33"
